kubernetes/outbox-connector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kafkaui-to-kafkaconnect
  namespace: strimzi
spec:
  podSelector:
    matchLabels:
      strimzi.io/cluster: debezium-connect-cluster
      strimzi.io/kind: KafkaConnect
      strimzi.io/name: debezium-connect-cluster-connect
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: kafka-ui
      ports:
        - protocol: TCP
          port: 8083
  policyTypes:
    - Ingress
